--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "ai-tutor-api",
   "version": "1.0.0",
   "description": "AI Tutor API for university-level courses",
-  "$${xaiArtifactTitle}$": "package.json",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "chart.js": "^4.4.0"
+    "chart.js": "^4.4.0",
+    "node-fetch": "^2.6.7"
   },
   "author": "cleefroakes",
   "license": "ISC"
