--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "chart.js": "^4.4.0",
-    "node-fetch": "^2.6.7"
+    "node-fetch": "^2.6.7",
+    "p5": "^1.4.2"
   },
   "author": "cleefroakes",
   "license": "ISC"
