--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "chart.js": "^4.4.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "node-fetch": "^2.6.7",
     "p5": "^1.4.2"
   },
