--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "node-fetch": "^2.6.7",
-    "p5": "^1.4.2"
+    "p5": "^1.4.2",
+    "python": "^0.0.4",
+    "python-shell": "^5.0.0",
+    "shell": "^0.12.0"
   },
   "author": "cleefroakes",
   "license": "ISC"
