Add cors dependency to fix MODULE_NOT_FOUND error

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "express": "^4.19.2",
     "node-fetch": "^3.3.2",
-    "python-shell": "^5.0.0"
+    "python-shell": "^5.0.0",
+    "cors": "^2.8.5"
   },
   "author": "cleefroakes",
   "license": "ISC"
