--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
-diffusers
-torch
-torchvision
-pillow
-moviepy 
-Pillow 
-transformers 
+python-dotenv
+Pillow==11.3.0
+diffusers==0.34.0
+transformers==4.53.2
+torch==2.7.1; platform_system != "Linux" or platform_machine != "x86_64"
+torch==2.7.1; sys_platform == "linux" and platform_machine == "x86_64" --find-links https://download.pytorch.org/whl/cpu
 accelerate
-protobuf
