--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,79 @@
-python-dotenv
+accelerate==1.8.1
+
+annotated-types==0.7.0
+anyio==4.9.0
+
+certifi==2025.6.15
+charset-normalizer==3.4.2
+
+click==8.2.1
+colorama==0.4.6
+decorator==5.2.1
+diffusers==0.34.0
+
+distro==1.9.0
+fastapi==0.115.13
+
+filelock==3.18.0
+fsspec==2025.5.1
+h11==0.16.0
+hf-xeet==1.1.5
+httpcore==1.0.9
+httpx==0.28.1
+huggingface-hub==0.33.2
+idna==3.10
+imageio==2.37.0
+imageio-ffmpeg==0.6.0
+importlib_metadata==8.7.0
+Jinja2==3.1.6
+jitter==0.10.0
+joblib==1.5.1
+
+MarkupSafe==3.0.2
+
+moviepy==2.2.1
+mpmath==1.3.0
+
+networkx==3.5
+numpy==2.2.6
+openai==1.88.0
+packaging==25.0
+pillow==11.3.0
+programlog==0.1.12
+protobuf==6.3.1
+psutil==7.0.0
+pydantic==2.1.1
+pydantic_core==2.3.3
+python-dotenv==1.1.1
+PyYAML==6.0.2
+regex==2024.11.6
+requests==2.32.4
+safetensors==0.5.3
+scikit-learn==1.6.1
+scipy==1.15.3
+setuptools==80.9.0
+sniffio==1.3.1
+starlette==0.46.2
+sympy==1.14.0
+threadpoolctl==3.6.0
+tokenizers==0.21.2
+
+torch==2.7.1
+
+torchvision==0.22.1
+
+tqdm==4.67.1
+
+transformers==4.53.1
+
+typing-inspection==0.4.1
+typing_extensions==4.14.0
+
+urllib3==2.4.0
+
+uvicorn==0.34.3
+
+Wikipedia-API==0.8.1
+
+zipp==3.23.0
+dotenv
